--- a/dia5/src/styles/saldo.css
+++ b/dia5/src/styles/saldo.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 header {
@@ -31,18 +31,17 @@ header {
 }
 
 #cantidades{
-  line-height: 3;
+    line-height: 3;
 }
+
 .especial {
-    color: rgb(255, 255, 255);
-    
+  color: rgb(255, 255, 255);
 }
 
 #sidebar span {
   color: rgb(173, 170, 170);
   border: #212020;
 }
-
 
 a {
   text-decoration: none;
@@ -82,44 +81,67 @@ a:hover {
   background-color: rgb(0, 0, 0);
 }
 
-#tarjeta{
-    box-sizing: border-box;
-    position: relative;
+#tarjeta {
+  box-sizing: border-box;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 6rem;
+  padding-right: 10%;
+  height: 70vh;
+  
+}
+
+#tarjeta h1, #tarjeta h2, #tarjeta h3 {
+    margin: 0.5rem 0;
+    line-height: 1.3;
+}
+
+#tarjeta img {
+  width: 30%;
+}
+
+#saldo{
+    background-color: rgb(255, 255, 255);
+    border: #817d7d solid 1px;
+    border-radius: 10px;
+    width: 17%;
+    color: #817d7d;
+    height: 2rem;
     display: flex;
     justify-content: center;
-    padding-top:6rem;
-    padding-right: 10%;
-}
-
-#tarjeta img{
-    width: 45%;
-}
-
-footer{
-    display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding-left: 1.3rem;
-    padding-right: 1.3rem;
-    padding-top: 4rem;
-    width: 95%;
-    box-sizing: border-box;
+
 }
 
-#btn-comprar{
-    height: 6rem;
-    width: 10rem;
-    font-size: 1.3rem;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 0.5rem;
-    background-color: #D5FF43;
-    border-radius: 15px;
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
+  padding-top: 1.3rem;
+  padding-bottom: 1.3rem;
+  width: 95%;
+  box-sizing: border-box;
 }
 
-#btn-comprar img{
-    width: 70%;
+#btn-recargar {
+  height: 6rem;
+  width: 10rem;
+  font-size: 1.3rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.5rem;
+  background-color: #d5ff43;
+  border-radius: 15px;
+}
+
+#btn-recargar img {
+  width: 70%;
 }
