--- a/dia9/src/styles/styles.css
+++ b/dia9/src/styles/styles.css
@@ -1,74 +1,39 @@
 body {
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: center;
+  background-color: black;
+  justify-content: center; 
+  align-items: center; 
+  height: 100vh; 
 }
 
 .main {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  padding: 1rem;
-  border-radius: 14px;
-  background-color: black;
-  color: white;
-  width: 50vw;
-  height: auto;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, auto);
-  grid-gap: 10px;
-  justify-content: left;
-}
-
-#section-1,
-#section-2,
-#section-3,
-#section-4 {
-  margin: 0;
-}
-
-#section-1 {
-  margin: 0;
-  grid-column: 1;
-  grid-row: 1;
-  height: min-content;
-  width: min-content;
-}
-
-#section-2 {
-  margin: 0;
-  grid-column: 2;
-  padding: 1rem;
-  display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  background-color: #e4ebe5;
-  color: black;
-  border-radius: 14px;
+  padding: 1vi;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+  
+}
+
+.item-1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.item-2 {
+  grid-column: 2 / 3;
   grid-row: 1 / 3;
-  height: 20rem;
-  font-size: 80%;
 }
 
-#section-3 {
-  margin: 0;
-  grid-column: 1;
-  grid-row: 2;
-  height: min-content;
-  width: min-content;
+.item-3{
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
 }
 
-#section-4 {
-  margin: 0;
+.item-4{
   grid-column: 1 / 3;
-  grid-row: 3;
-  height: 20rem;
-  width: 100%;
-}
-
-#section-4 iframe {
-  width: 100%;
-  height: 100%;
+  grid-row: 3 / 4;
 }
